# swarms-rs

./: .env.example  CLAUDE.md  Cargo.toml  py_vs_rust.md  tetrac-integration.md
swarms-rs/src/llm/provider/: openai.rs
swarms-tetrac/: Cargo.toml  README.md  examples.md
swarms-tetrac/examples/: ttc_arb_scan.rs  ttc_buy_usd.rs  ttc_loop.rs  ttc_market_snapshot.rs  ttc_protect_positions.rs  ttc_scan_and_trade.rs  ttc_show_positions.rs  ttc_signal_executor.rs  ttc_unattended.rs
swarms-tetrac/src/: client.rs  config.rs  error.rs  lib.rs  parsers.rs  redact.rs  runtime.rs  tools.rs
swarms-tetrac/tests/: mcp_bridge.rs  mockito_paths.rs
