[package]
name = "swarms-tetrac"
version = "0.1.0"
edition = "2024"
description = "TTC (ttc.box) integration tools for swarms-rs agents."
authors = ["tetrac-official"]
license = "Apache-2.0"
repository = "https://github.com/tetrac-official/swarms-rs"
readme = "README.md"
keywords = ["ttc", "trading", "swarms", "agents", "crypto"]
categories = ["api-bindings"]

[dependencies]
swarms-rs = { path = "../swarms-rs" }

tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "0.8", features = ["derive"] }

thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Used by both lib (examples) and the mcp bridge binary.
dotenvy = "0.15"

# skill-trading provides the typed TTC API client. Pinned by rev so
# a `cargo update` doesn't silently change behavior — bump the rev
# manually when you want the latest. Switch to `tag = "vX.Y.Z"` once
# the upstream tags releases.
skill-trading = { git = "https://github.com/tetrac-official/rust-cli-ttc-api", rev = "efd30cce2d2986601c9e0d416c66ed8e1b416f0b" }

# swarms-macro provides the #[tool] proc macro used in tools.rs.
swarms-macro = { path = "../swarms-macro" }

[dev-dependencies]
anyhow = "1"
mockito = "1"

[[bin]]
name = "swarms-tetrac-mcp-bridge"
path = "src/bin/mcp_bridge.rs"
